# mySPH

./: .gitignore  CMakeLists.txt  README.md  access.toml  clean.sh  tar.sh
cmake/: FindToml-f.cmake  toml-f.cmake
data/: clean.sh
data/UNDEX/: clean.sh  plot.plt  sph.toml
data/armcoIronCollide/: plot.plt  sph.toml
data/cantileverBeam/: clean.sh  plot.plt  sph.toml
data/cantileverBeam3D/: plot.plt  sph.toml
data/cantileverBeamPointLoad/: plot.plt  sph.toml
data/clammpedBeamWithOil/: clean.sh  plot.plt  sph.toml
data/damBreak/: Time.txt  clean.sh  plot.plt  solid.plt  sph.toml
data/damBreakwithElasticGate/: plot.plt  solid.plt  sph.toml
data/demo/shearCavity/: plot.plt  sph.toml  xUy.plt  yUx.plt
data/demo/shockTube/: plot.plt  plot_pic.plt  sph.toml
data/demo/shockTube/exact/: Riemann_0.2s.txt
data/tntBar/: Time.txt  demo  plot.plt  plot_pic.plt  reconstruct.sh  sph.toml
data/tntCylinder/: sph.toml
data/underwaterExplosion/: plot.plt
data/undexChamber/: plot.plt  sph.toml
data/undexCylinder/: sph.toml
data/undexPlate/: plot.plt  solid.plt  sph.toml
data/waterImpact/: plot.plt  solid.plt  sph.toml
doc/: profiling.md  基于近似Riemann解的SPH方法简要流程.tex
doc/Explosion/HE/: note.md  note.tex
doc/profiling/: BGGSprofiling.prof  BGGSprofiling2.prof  ParticleTypeProfiling.prof  Profiling.prof  direct.prof  linkList.prof  linkList1.prof  linkList2.prof  linkList3.prof  linkList4.prof  linkList6.prof  profiling
src/: CMakeLists.txt  macro.h  main.f90  tools.f90
src/0/: controlDict.f90  getValueFromToml.f90  graphics.f90  linkList.f90  tools.f90
src/1/: allocateMemory.f90  area.f90  artificialHeat.f90  artificialViscosity.f90  boundaryCondition.f90  correctVelocity.f90  courantNumber.f90  decomposePar.f90  divergence.f90  dummyParticles.f90  eos.f90  externalForce.f90  hsml.f90  kernel.f90  output.f90  viscosity.f90
src/2/: density.f90  input.f90  internalForce.f90  nnps.f90
src/3/: timeIntegration.f90
src/Initialize/: CMakeLists.txt  SPH.f90  allocateMemory.f90  controlDict.f90  getValueFromToml.f90  input.f90
src/NNPS/: CMakeLists.txt  asymmetricSearch.f90  backGroundGrid.f90  backGroundGridSearch.f90  linkList.f90  nnps.f90  tree.f90
src/Numeric/: CMakeLists.txt  artificialHeat.f90  artificialTerm.f90  artificialViscosity.f90  correctVelocity.f90  courantNumber.f90  decomposePar.f90  divergence.f90  hsml.f90  kernel.f90  kernelGradientCorrection.f90  shifting.f90
src/Output/: CMakeLists.txt  output.f90
src/Physic/: CMakeLists.txt  HE.f90  boundaryCondition.f90  density.f90  dummyParticles.f90  eos.f90  externalForce.f90  internalForce.f90  viscosity.f90
src/TimeIntegration/: CMakeLists.txt  singleStep.f90  timeIntegration.f90
test/: CMakeLists.txt  DSPHtest.f90  dyadicProductTest.f90  eosTest.f90  exceptionTest.f90  kernelPlot.plt  kernelTest.f90  openBoundaryTest.m  plot.plt  progressBarTest.f90  roundTest.f90  toStringTest.f90  toml-fTest.f90
